# chihiro

./: .gitignore  CMakeLists.txt  README.md  meson.build
.cache/clangd/index/: main.cpp.256AE44AFDF536AA.idx
src/: main.c  main.cpp
src/commands/: Kick.cpp  Kick.h  ban.c  commands.h  kick.c
src/util/: file.c  util.h
